--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,8 @@
   <link rel="stylesheet" href="app/question/question.css">
   <!-- endinjector -->
   <!-- endbuild -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
+  <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">-->
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
 <body ng-app="wpappApp">
@@ -70,7 +71,8 @@
   <script src="bower_components/angular-material/angular-material.js"></script>
   <script src="bower_components/lodash/dist/lodash.compat.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="bower_components/angular-base64-upload/angular-base64-upload.js"></script>
+  <script src="bower_components/angular-base64-upload/src/angular-base64-upload.js"></script>
+  <script src="bower_components/moment/moment.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -89,6 +91,7 @@
   <script src="app/main/main.js"></script>
   <script src="app/question/question.controller.js"></script>
   <script src="app/question/question.dialog/question.dialog.controller.js"></script>
+  <script src="app/question/question.dialog/response.config.dialog.controller.js"></script>
   <script src="app/question/question.js"></script>
   <script src="components/auth/auth.service.js"></script>
   <script src="components/auth/user.service.js"></script>
