--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -1,12 +1,13 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-
-<div class="container">
-  <p>The delete user and user index api routes are restricted to users with the 'admin' role.</p>
-  <ul class="list-group">
-    <li class="list-group-item" ng-repeat="user in users">
-        <strong>{{user.name}}</strong><br>
-        <span class="text-muted">{{user.email}}</span>
-        <a ng-click="delete(user)" class="trash"><span class="glyphicon glyphicon-trash pull-right"></span></a>
-    </li>
-  </ul>
-</div>
+<!--<div ng-include="'components/navbar/navbar.html'"></div>-->
+<md-list ng-cloak>
+  <md-subheader class="md-no-sticky">Users List</md-subheader>
+  <md-list-item ng-repeat="user in users" class="noright">
+    <img alt="{{ person.name }}" ng-src="{{ getUserImage(user) }}" class="md-avatar" />
+    <p>{{ user.name }}</p>
+    <md-icon md-svg-icon="action:delete" ng-click="removeUser($event,user)" aria-label="Delete User" class="md-secondary md-hue-3"></md-icon>
+    <!--<md-icon class="md-secondary" ng-click="doSecondaryAction($event)" aria-label="Chat" md-svg-icon="communication:message"></md-icon>-->
+  </md-list-item>
+</md-list>
+<md-button class="md-fab md-icon-button md-accent" aria-label="Add new" ng-click="addUser($event)" style="position:absolute; bottom:10px;right:10px;">
+  <md-icon md-svg-icon="content:add"></md-icon>
+</md-button>
