--- a/client/app/question/question.dialog/response.config.dialog.html
+++ b/client/app/question/question.dialog/response.config.dialog.html
@@ -30,7 +30,7 @@
                     <div layout="column" flex layout-fill ng-cloak>
                         <h5>Responses</h5>
                         <div layout="row" ng-repeat="res in step.responses">
-                            <div layout="column" flex="100" layout-fill>
+                            <div layout="column" flex="95" layout-fill>
                                 <div layout="row">
                                     <md-input-container flex="5">
                                         <label>#{{$index+1}}</label>
@@ -58,6 +58,11 @@
                                         <!--<div class="input-message hint" ng-if="!responseForm.response.$dirty">MMC Codes</div>-->
                                     </md-input-container>
                                 </div>
+                            </div>
+                            <div layout="column" flex layout-fill>
+                                <md-button ng-click="deleteResponse($event, $index)">
+                                    <md-icon md-svg-src="action:delete" aria-label="Delete Response"></md-icon>
+                                </md-button>
                             </div>
                         </div>
                         <div layout="row">
