--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -12,7 +12,9 @@
                                 <h3>{{ item.identifier }}</h3>
                                 <p>{{ item.questionText }}</p>
                             </div>
+                            <md-icon class="md-secondary" ng-click="openCopy($event, item, $index)" aria-label="Copy"><i class="material-icons">content_copy</i></md-icon>
                             <md-icon class="md-secondary" ng-click="openItem($event, item)" aria-label="Chat" md-svg-icon="editor:mode_edit"></md-icon>
+                            <md-icon class="md-secondary" ng-click="deleteItem($event, item, $index)" aria-label="Delete"><i class="material-icons">delete</i></md-icon>
                         </md-list-item>
                         <md-divider></md-divider>
                     </md-list>
@@ -20,7 +22,7 @@
             </md-tab>
         </md-tabs>
     </md-content>
-    <md-button class="md-fab md-icon-button md-accent" aria-label="Add new" ng-click="openItem($event)" style="position:absolute; bottom:10px;right:10px;">
+    <md-button class="md-fab md-icon-button md-accent" aria-label="Add new" ng-click="openItem($event)" style="position:fixed; bottom:10px;right:10px;">
         <md-icon md-svg-icon="content:add"></md-icon>
     </md-button>
 </div>
