Added: CSS link for icons

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
   <link rel="stylesheet" href="app/app.css">
   <link rel="stylesheet" href="app/main/main.css">
   <link rel="stylesheet" href="app/question/question.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- endinjector -->
   <!-- endbuild -->
   <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">-->
