Updated for changes to list view

--- a/client/app/question/question.dialog/question.dialog.html
+++ b/client/app/question/question.dialog/question.dialog.html
@@ -177,6 +177,6 @@
     </md-dialog-content>
     <md-dialog-actions>
         <md-button ng-click="closeDialog()" class="md-primary">Cancel</md-button>
-        <md-button ng-click="addQuestion($event)" class="md-primary">Save</md-button>
+        <md-button ng-click="saveQuestion($event)" class="md-primary">Save</md-button>
     </md-dialog-actions>
 </md-dialog>
