--- a/client/app/question/question.dialog/question.dialog.html
+++ b/client/app/question/question.dialog/question.dialog.html
@@ -159,6 +159,13 @@
                         </div>
                     </md-input-container>
                 </div>
+                <div layout="row">
+                    <md-input-container flex>
+                        <label>Expressions </label>
+                        <textarea name="expressions" rows="1" ng-model="item.expressions" md-select-on-focus></textarea>
+                        <div class="input-message hint" ng-if="!questionForm.expressions.$dirty">Write expressions one line per expression</div>
+                    </md-input-container>
+                </div>
                 <md-divider></md-divider>
                 <h2>Comments</h2>
                 <div layout="row">
