--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -30,7 +30,7 @@
                         </md-menu-content>
                     </md-menu>
                     <span flex></span>
-                    <input class="search-box" ng-model="search.qId" placeholder="search">
+                    <input class="search-box" ng-model="search.qId" placeholder="Search by Question Id">
                 </div>
             </md-toolbar>
             <md-list class="questions-list" ng-cloak>
