Sync'd With Original

--- a/client/app/question/question.html
+++ b/client/app/question/question.html
@@ -50,7 +50,7 @@
                     <md-icon class="md-secondary" ng-click="copyItem($event, item)" aria-label="Copy" md-svg-icon="content:content_copy"></md-icon>
                     <md-icon class="md-secondary" ng-click="openItem($event, item)" aria-label="Edit" md-svg-icon="editor:mode_edit"></md-icon>
                     <md-icon class="md-secondary" ng-click="archiveItem($event, item)" aria-label="Archive" md-svg-icon="action:delete"></md-icon>
-                    <md-icon class="md-secondary" ng-click="publish($event, item)" aria-label="Publish" md-svg-icon="editor:publish"></md-icon>
+                    <md-icon class="md-secondary" ng-click="publishItem($event, item)" aria-label="Publish" md-svg-icon="editor:publish"></md-icon>
                 </md-list-item>
                 <md-divider></md-divider>
             </md-list>
